# todo-timer

./: .gitignore  README.md  error.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.js  main.tsx  styles.css  timer_widget.js  timer_widget.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CircularProgressBar.tsx  DeleteConfirmationDialog.tsx  Header.tsx  KeyboardShortcutsModal.tsx  QuickCommandsModal.tsx  RoutineInput.tsx  Stopwatch.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  TimerControls.tsx  TimerView.tsx
src/hooks/: useTaskManager.ts  useTimer.ts  useWindowResize.ts  useWindowResizer.ts  useWindowSizeManager.ts
src/js/: state.js  timer.js  ui.js
src/store/: useTaskStore.ts  useTimerStore.ts
