[package]
name = "todo-timer"
version = "0.1.0"
description = "A Todo Timer Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "tray-icon" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.2"
tauri-plugin-store = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-shell = "2.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
